--- a/docker/prod.env
+++ b/docker/prod.env
@@ -17,3 +17,7 @@ DB_DATA=app
 # mongo express
 ME_USERNAME=mongoExpressUser
 ME_PASSWORD=myMongoExpressPassword
+
+# google search ENV
+API_KEY=apikey
+CX=cx
