--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "type": "git",
         "url": "git://github.com/michellemtchai/docker-node-boilerplate.git"
     },
-    "license" : "MIT",
+    "license": "MIT",
     "main": "server.js",
     "scripts": {
         "prod": "node server.js",
@@ -22,6 +22,8 @@
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "mongoose": "^5.11.14",
+        "node-fetch": "^2.6.1",
+        "query-string": "^6.13.8",
         "supervisor": "^0.12.0"
     }
 }
