--- a/frontend/docker/docker-compose.dev.yml
+++ b/frontend/docker/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-    app:
+    frontend:
         build:
             context: ../
             dockerfile: ./docker/Dockerfile.dev
