centralize docker-compose so that it doesn't have to be run twice

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,5 +1,17 @@
+# stage1 - build react app
 FROM node:14-alpine
 
+RUN mkdir /frontend
+WORKDIR /frontend
+
+COPY ./frontend /frontend
+
+RUN yarn --silent
+
+RUN yarn build
+
+
+# stage2 - build node app
 # Create app directory
 WORKDIR /app
 
@@ -8,3 +20,6 @@ COPY . /app/
 
 # install packages
 RUN npm ci --only=production
+
+# copy react build files
+RUN mv -v /frontend/build/* /app/public
