--- a/docker/dev.env
+++ b/docker/dev.env
@@ -17,6 +17,10 @@ DB_DATA=app
 # mongo express
 ME_USERNAME=mongoExpressUser
 ME_PASSWORD=myMongoExpressPassword
+ME_PORT=8081
+
+# frontend
+FRONTEND_PORT=8080
 
 # google search ENV
 API_KEY=apikey
