--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -7,3 +7,12 @@ services:
         command: npm start
         volumes:
             - ..:/app
+    frontend:
+        build:
+            context: ../frontend
+            dockerfile: ./docker/Dockerfile.dev
+        command: yarn start
+        volumes:
+            - ../frontend:/app
+        ports:
+            - ${FRONTEND_PORT}:${FRONTEND_PORT}
