--- a/docker/prod.env
+++ b/docker/prod.env
@@ -17,6 +17,7 @@ DB_DATA=app
 # mongo express
 ME_USERNAME=mongoExpressUser
 ME_PASSWORD=myMongoExpressPassword
+ME_PORT=8081
 
 # google search ENV
 API_KEY=apikey
