delete docker folder in frontend and create Dockerfile.frontend instead

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -22,4 +22,4 @@ COPY . /app/
 RUN npm ci --only=production
 
 # copy react build files
-RUN mv -v /frontend/build/* /app/public
+RUN mv -v /frontend/build/assets/* /app/public
