reorganize app to use react-scripts and nodemon

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -1,9 +1,5 @@
-version: "3.3"
+version: '3.3'
 services:
-    mongodb:
-        restart: always
-    mongo-express:
-        restart: always
     app:
         build:
             context: ..
