--- a/docker/dev.env
+++ b/docker/dev.env
@@ -4,20 +4,13 @@ COMPOSE_FILE=./docker/docker-compose.yml:./docker/docker-compose.dev.yml
 
 # environment
 APP_ENV=development
-HOST=0.0.0.0
-PORT=3000
-
-# database
-DB_USERNAME=root
-DB_PASSWORD=mySecretPassword
-DB_HOST=mongodb
-DB_PORT=27017
-DB_DATA=app
-
-# mongo express
-ME_USERNAME=mongoExpressUser
-ME_PASSWORD=myMongoExpressPassword
-ME_PORT=8081
+APP_HOST=0.0.0.0
+APP_PORT=3000
+FRONTEND_PORT=3001
+APP_TITLE=Image Search
+APP_DESC=An image search abstraction layer built with Google Search API.
+FAST_REFRESH=false
+CHOKIDAR_USEPOLLING=true
 
 # frontend
 FRONTEND_PORT=8080
