--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,18 +1,11 @@
-version: "3.3"
+version: '3'
 services:
-    frontend:
-        build:
-            context: ../frontend
-            dockerfile: ../docker/Dockerfile.frontend
-        command: yarn start
-        volumes:
-            - ../frontend:/app
-        ports:
-            - ${FRONTEND_PORT}:${FRONTEND_PORT}
     app:
         build:
             context: ..
             dockerfile: ./docker/Dockerfile.dev
-        command: npm start
+        command: yarn all
+        ports:
+            - ${FRONTEND_PORT}:${FRONTEND_PORT}
         volumes:
             - ..:/app
