--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-    "name": "docker-node-boilerplate",
+    "name": "image-search-abstraction-layer",
     "version": "1.0.0",
-    "description": "A Node.js app on Docker",
     "author": "Michelle Chai",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/michellemtchai/docker-node-boilerplate.git"
-    },
     "license": "MIT",
     "main": "server.js",
     "scripts": {
+        "all": "./run.sh",
         "prod": "node server.js",
-        "start": "supervisor server.js",
+        "start": "nodemon server.js ",
         "doc": "apidoc -i . -o ./.apidocs/ -f \".*\\.js$\" -f \".*\\.ts$\" -e ./node_modules -e ./.apidocs"
     },
     "dependencies": {
@@ -24,6 +20,14 @@
         "mongoose": "^5.11.14",
         "node-fetch": "^2.6.1",
         "query-string": "^6.13.8",
-        "supervisor": "^0.12.0"
+        "nodemon": "^2.0.7"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "public/*",
+            "frontend/*",
+            "docker/*"
+        ],
+        "legacyWatch": true
     }
 }
