set up deploying

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,25 +1,23 @@
-# stage1 - build react app
 FROM node:14-alpine
 
-RUN mkdir /frontend
-WORKDIR /frontend
-
-COPY ./frontend /frontend
-
-RUN yarn --silent
-
-RUN yarn build
-
-
-# stage2 - build node app
-# Create app directory
 WORKDIR /app
 
 # Bundle app source
 COPY . /app/
 
 # install packages
-RUN npm ci --only=production
+RUN yarn global add react-scripts
+RUN yarn install --production
+
+# Build React app
+WORKDIR /app/frontend
+RUN yarn install --production
+RUN yarn build
+
+# Go back to app root
+WORKDIR /app
 
 # copy react build files
-RUN mv -v /frontend/build/assets/* /app/public
+RUN mv /app/frontend/build/* /app/public
+RUN node /app/docker/deploy.js
+RUN rm .env
