--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "mongoose": "^5.11.14",
         "node-fetch": "^2.6.1",
         "query-string": "^6.13.8",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "compression": "^1.7.4",
+        "serve-favicon": "^2.5.0"
     },
     "nodemonConfig": {
         "ignore": [
