--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -1,8 +1,8 @@
-version: '3.3'
+version: '3'
 services:
     app:
         build:
             context: ..
             dockerfile: ./docker/Dockerfile.prod
-        command: npm run prod
+        command: yarn prod
         restart: always
