--- a/docker/prod.env
+++ b/docker/prod.env
@@ -6,9 +6,15 @@ COMPOSE_FILE=./docker/docker-compose.yml:./docker/docker-compose.prod.yml
 APP_ENV=production
 APP_HOST=0.0.0.0
 APP_PORT=3000
+
+# frontend
 FRONTEND_PORT=8080
+APP_START_URL=/
+APP_PUBLIC_URL=/assets
 APP_TITLE=Image Search
 APP_DESC=An image search abstraction layer built with Google Search API.
+APP_THEME_COLOR=#000000
+APP_BACKGROUND_COLOR=#ffffff
 FAST_REFRESH=false
 CHOKIDAR_USEPOLLING=true
 
