--- a/docker/dev.env
+++ b/docker/dev.env
@@ -6,14 +6,17 @@ COMPOSE_FILE=./docker/docker-compose.yml:./docker/docker-compose.dev.yml
 APP_ENV=development
 APP_HOST=0.0.0.0
 APP_PORT=3000
-FRONTEND_PORT=3001
-APP_TITLE=Image Search
-APP_DESC=An image search abstraction layer built with Google Search API.
-FAST_REFRESH=false
-CHOKIDAR_USEPOLLING=true
 
 # frontend
 FRONTEND_PORT=8080
+APP_START_URL=/
+APP_PUBLIC_URL=/assets
+APP_TITLE=Image Search
+APP_DESC=An image search abstraction layer built with Google Search API.
+APP_THEME_COLOR=#000000
+APP_BACKGROUND_COLOR=#ffffff
+FAST_REFRESH=false
+CHOKIDAR_USEPOLLING=true
 
 # google search ENV
 API_KEY=apikey
