--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "query-string": "^6.13.8",
         "nodemon": "^2.0.7",
         "compression": "^1.7.4",
-        "serve-favicon": "^2.5.0"
+        "serve-favicon": "^2.5.0",
+        "node-cache": "^5.1.2"
     },
     "nodemonConfig": {
         "ignore": [
