--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "all": "./run.sh",
         "prod": "node server.js",
         "start": "nodemon server.js ",
+        "build": "bash ./heroku-deploy.sh",
         "doc": "apidoc -i . -o ./.apidocs/ -f \".*\\.js$\" -f \".*\\.ts$\" -e ./node_modules -e ./.apidocs"
     },
     "dependencies": {
