--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,8 +15,8 @@ services:
             APP_BACKGROUND_COLOR: ${APP_BACKGROUND_COLOR}
             REACT_APP_TITLE: ${APP_TITLE}
             REACT_APP_DESC: ${APP_DESC}
-            REACT_APP_ENV: ${APP_ENV}
             REACT_APP_HOST: ${APP_HOST}
             REACT_APP_PORT: ${APP_PORT}
+            REACT_APP_PUBLIC_URL: ${APP_PUBLIC_URL}
             FAST_REFRESH: ${FAST_REFRESH}
             CHOKIDAR_USEPOLLING: ${CHOKIDAR_USEPOLLING}
