--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prod": "node server.js",
         "start": "nodemon server.js ",
         "build": "bash ./heroku-build.sh",
-        "doc": "apidoc -i . -o ./.apidocs/ -f \".*\\.js$\" -f \".*\\.ts$\" -e ./node_modules -e ./.apidocs"
+        "doc": "apidoc -i . -o ./docs/ -f \".*\\.js$\" -f \".*\\.ts$\" -e ./node_modules -e ./docs"
     },
     "dependencies": {
         "apidoc": "^0.26.0",
