--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^16.12.0",
         "react-redux": "^7.1.3",
+        "react-scripts": "^5.0.1",
         "redux": "^4.0.5"
     },
     "scripts": {
